[package]
name = "python_in_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
log = "0.4"
colored="1.7.1"
proc_marco = { path = "proc_marco" }
bimap = "0.6.3"
typed-builder = "0.20.0"

[build-dependencies]
shadow-rs = "0.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]